prodMetadata/src/objects/DC_Event__c.object
<CustomObject>
    <description>DC events such as congressional testimonies</description>
    <fields>
        <fullName>AIR_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AIR Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AIR_Overdue__c</fullName>
        <formula>IF ((AND ( AIR_Required__c = True, AIR_Completed__c = False,  Date_and_Time__c  +2 &lt; DATEVALUE(NOW()))), &quot;True&quot;, &quot;False&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AIR Overdue</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AIR_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AIR Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <description>Street address of location where event takes place</description>
        <inlineHelpText>Street address of location where event takes place</inlineHelpText>
        <label>Address</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <defaultValue>&quot;Washington&quot;</defaultValue>
        <description>City where event takes place</description>
        <inlineHelpText>City where event takes place</inlineHelpText>
        <label>City</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Committee__c</fullName>
        <inlineHelpText>For other, fill in the Other Committee box below</inlineHelpText>
        <label>Committee</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Senate Veterans Affairs Committee</fullName>
                </value>
                <value>
                    <fullName>House Veterans Affairs Committee</fullName>
                </value>
                <value>
                    <fullName>Joint Senate and House Veteran Affairs Committee</fullName>
                </value>
                <value>
                    <fullName>Senate Armed Services Committee</fullName>
                </value>
                <value>
                    <fullName>House Armed Services Committee</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_and_Time__c</fullName>
        <description>If this event takes place on one date, indicate that here.  If the event spans multiple days, indicate the start date here.</description>
        <inlineHelpText>If this event takes place on one date, indicate that here.  If the event spans multiple days, indicate the start date here.</inlineHelpText>
        <label>Date (Start Date)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <inlineHelpText>If the event spans multiple days, indicate the end date here.  Otherwise, leave blank.</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event_Expectation__c</fullName>
        <label>Event Expectation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Network</fullName>
                </value>
                <value>
                    <fullName>Observe</fullName>
                </value>
                <value>
                    <fullName>Participate in Discussion</fullName>
                </value>
                <value>
                    <fullName>Speak before Audience</fullName>
                </value>
                <value>
                    <fullName>Submit Written Testimony</fullName>
                </value>
                <value>
                    <fullName>Testify</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Event_Name__c</fullName>
        <description>Name of the event</description>
        <inlineHelpText>Name of the event</inlineHelpText>
        <label>Event Name (deprec)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IAVA_Department__c</fullName>
        <description>Department with primary responsibility for providing fulfillment</description>
        <inlineHelpText>Department with primary responsibility for providing fulfillment</inlineHelpText>
        <label>IAVA Department</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Policy</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Membership</fullName>
                </value>
                <value>
                    <fullName>Communications</fullName>
                </value>
                <value>
                    <fullName>Strategic Parnerships</fullName>
                </value>
                <value>
                    <fullName>Development</fullName>
                </value>
                <value>
                    <fullName>Operations</fullName>
                </value>
                <value>
                    <fullName>Online</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Invited_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Pick the contact who invited us.  If necessary, create the contact record first.</description>
        <inlineHelpText>Pick the contact who invited us.  If necessary, create the contact record first.</inlineHelpText>
        <label>Invited By</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>DC Events</relationshipLabel>
        <relationshipName>Related_DC_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Level_of_Importance__c</fullName>
        <description>How high a priority is it for us to attend this event?</description>
        <inlineHelpText>How high a priority is it for us to attend this event?</inlineHelpText>
        <label>Level of Importance</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>TBD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Materials__c</fullName>
        <description>The materials needed to be brought to/presented at this event.</description>
        <inlineHelpText>The materials needed to be brought to/presented at this event.</inlineHelpText>
        <label>Materials</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <description>Any additional notes regarding this event</description>
        <inlineHelpText>Any additional notes regarding this event</inlineHelpText>
        <label>Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Other_Committee__c</fullName>
        <defaultValue>&quot;N/A&quot;</defaultValue>
        <inlineHelpText>Fill in for other committees.  Leave blank if committee is SVAC or HVAC or for non-testimony events.</inlineHelpText>
        <label>Other Committee</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Place__c</fullName>
        <description>Name of the location where this event takes place.</description>
        <inlineHelpText>Name of the location where this event takes place.</inlineHelpText>
        <label>Place</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSVP__c</fullName>
        <description>Have we responded?</description>
        <inlineHelpText>Have we responded?</inlineHelpText>
        <label>RSVP</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Not Complete</fullName>
                </value>
                <value>
                    <fullName>Not Required</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Congressional Staff</fullName>
                </value>
                <value>
                    <fullName>DoD Staff</fullName>
                </value>
                <value>
                    <fullName>Generic Invitation</fullName>
                </value>
                <value>
                    <fullName>IAVA Engagement Division</fullName>
                </value>
                <value>
                    <fullName>IAVA Executive Office</fullName>
                </value>
                <value>
                    <fullName>IAVA Operations</fullName>
                </value>
                <value>
                    <fullName>IAVA Policy Division</fullName>
                </value>
                <value>
                    <fullName>IAVA Program Division</fullName>
                </value>
                <value>
                    <fullName>IAVA Resource Division</fullName>
                </value>
                <value>
                    <fullName>Other IAVA Department</fullName>
                </value>
                <value>
                    <fullName>The White House</fullName>
                </value>
                <value>
                    <fullName>VA Staff</fullName>
                </value>
                <value>
                    <fullName>VSO Partner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <defaultValue>&quot;DC&quot;</defaultValue>
        <description>State where event takes place</description>
        <inlineHelpText>State where event takes place</inlineHelpText>
        <label>State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Whether or not we will attend this event</description>
        <inlineHelpText>Whether or not we will attend this event</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Undecided</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subcommittee__c</fullName>
        <label>Subcommittee</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Committee__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Disability Assistance and Memorial Affairs</fullName>
                </value>
                <value>
                    <fullName>Economic Opportunity</fullName>
                </value>
                <value>
                    <fullName>Health</fullName>
                </value>
                <value>
                    <fullName>Readiness</fullName>
                </value>
                <value>
                    <fullName>Seapower and Expeditionary Forces</fullName>
                </value>
                <value>
                    <fullName>Air and Land Forces</fullName>
                </value>
                <value>
                    <fullName>Oversight and Investigations</fullName>
                </value>
                <value>
                    <fullName>Terrorism, Unconventional Threats and Capabilities</fullName>
                </value>
                <value>
                    <fullName>Strategic Forces</fullName>
                </value>
                <value>
                    <fullName>Military Personnel</fullName>
                </value>
                <value>
                    <fullName>Airland</fullName>
                </value>
                <value>
                    <fullName>Emerging Threats and Capabilities</fullName>
                </value>
                <value>
                    <fullName>Personnel</fullName>
                </value>
                <value>
                    <fullName>Readiness and Management Support</fullName>
                </value>
                <value>
                    <fullName>Seapower</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Time__c</fullName>
        <description>Indicate the start time in the following format (HH:MM XX) where XX is AM or PM.</description>
        <inlineHelpText>Indicate the start time in the following format (HH:MM XX) where XX is AM or PM.</inlineHelpText>
        <label>Time</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>For press-related events, use the Press Hits tab instead</description>
        <inlineHelpText>For press-related events, use the Press Hits tab instead</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ceremony</fullName>
                </value>
                <value>
                    <fullName>Conference</fullName>
                </value>
                <value>
                    <fullName>Congressional Hearing</fullName>
                </value>
                <value>
                    <fullName>Congressional Mark-Up</fullName>
                </value>
                <value>
                    <fullName>Congressional Roundtable</fullName>
                </value>
                <value>
                    <fullName>Congressional Testimony</fullName>
                </value>
                <value>
                    <fullName>DoD Event/Meeting</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Roundtable</fullName>
                </value>
                <value>
                    <fullName>Speaking Event</fullName>
                </value>
                <value>
                    <fullName>VA Event/Meeting</fullName>
                </value>
                <value>
                    <fullName>VSO Event</fullName>
                </value>
                <value>
                    <fullName>VSO Meeting</fullName>
                </value>
                <value>
                    <fullName>White House Event/Meeting</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>DC Event</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Date_and_Time__c</columns>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Level_of_Importance__c</columns>
        <columns>Committee__c</columns>
        <columns>Subcommittee__c</columns>
        <columns>City__c</columns>
        <columns>Place__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Congressional_Testimony</fullName>
        <columns>Date_and_Time__c</columns>
        <columns>NAME</columns>
        <columns>Level_of_Importance__c</columns>
        <columns>Materials__c</columns>
        <columns>Committee__c</columns>
        <columns>Other_Committee__c</columns>
        <columns>Subcommittee__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>notContain</operation>
            <value>Conference,Ceremony,Meeting,Presentation,Dinner,Summit,Other</value>
        </filters>
        <label>Congressional Testimony</label>
    </listViews>
    <listViews>
        <fullName>Events</fullName>
        <booleanFilter>1</booleanFilter>
        <columns>Date_and_Time__c</columns>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Level_of_Importance__c</columns>
        <columns>Notes__c</columns>
        <columns>City__c</columns>
        <columns>Place__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>notContain</operation>
            <value>Congressional Testimony,Roundtable</value>
        </filters>
        <label>Events</label>
    </listViews>
    <listViews>
        <fullName>Special_Reception_Honoring_Rep_Tammy_Du</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>Special Reception Honoring Rep. Tammy Du</label>
        <sharedTo>
            <group>AllStaff</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Types_to_remove</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Status__c</columns>
        <columns>Date_and_Time__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Ceremony,Meeting,Presentation,Dinner,Summit</value>
        </filters>
        <label>Types to remove</label>
    </listViews>
    <nameField>
        <label>DC Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DC Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>